addded divider but there is problem with navbar and iframe

--- a/index.html
+++ b/index.html
@@ -38,17 +38,64 @@
       </div>
     </nav>
 
-    <!-- Header -->
+    <!-- About -->
 
-    <header class="alternative-section-bg">
-      <div class="header-image-container">
-        <img src="assets/background-images/collage2.png" alt="" />
+    <section class="alternative-section-bg" id="about">
+      <div class="wrapper">
+        <h2>Bio and Education: Meet Matt</h2>
+        <div class="about">
+          <div class="">
+            <img src="assets/0.jpeg" alt="" />
+            <h4>Registered Physiotherapist</h4>
+            <h4>MScPT, MSc Neuroscience, BSc (Hons)</h4>
+          </div>
+          <div class="frank-text">
+            <p>
+              Matt began his academic journey at Carleton University, graduating
+              in 2015 with a Bachelor of Science degree in Neuroscience and
+              Mental Health. He then completed his Master of Science degree
+              within the field of Neuroscience at Queen’s University in 2017,
+              exploring how eye movements can be used as a potential biomarker
+              to diagnose and assess neurological disorders, such as Alzheimer’s
+              disease. He was awarded the prestigious Frederick Banting and
+              Charles Best Canada Graduate Scholarship for his research and
+              accomplishments.
+            </p>
+            <p>
+              After completing his thesis, Matt pursued a second Master of
+              Science degree in Physical Therapy at Queen’s University,
+              graduating in 2019. Matt has furthered his clinical training by
+              completing courses in soft tissue release, advanced manual
+              therapy, dry needling/acupuncture, pain neuroscience, and
+              vestibular rehabilitation techniques.
+            </p>
+            <p>
+              Matt has a special interest in treating a wide variety of clients,
+              ranging from elite athletes to clients suffering from debilitating
+              chronic pain. He also has experience treating clients suffering
+              from vertigo, cervicogenic headaches, running injuries, and lower
+              back pain, both acute and chronic.
+            </p>
+            <p>
+              Matt is passionate about accelerating his clients’ recovery from
+              injury. He values compassion, always striving to understand his
+              client’s values and individualizes their rehabilitation to suit
+              their functional needs and goals. He strives to implement
+              evidence-informed techniques into his practice, remaining up to
+              date on effective treatment strategies and educational approaches.
+              When not at work, Matt loves to be outdoors camping, fishing,
+              golfing and lifting weights.
+            </p>
+          </div>
+        </div>
       </div>
-    </header>
+    </section>
+
+    <hr class="wrapper style-eight" />
 
     <!-- Services -->
 
-    <section class="section-bg padding-top" id="services">
+    <section class="section-bg padding" id="services">
       <h2>Services</h2>
       <div class="services wrapper padding-bottom">
         <p>Injury Rehabilitation and Prevention</p>
@@ -104,11 +151,13 @@
       </div>
     </section>
 
+    <hr class="wrapper style-eight" />
+
     <!-- Delivery of Services -->
 
     <section class="padding-top alternative-section-bg" id="del-services">
       <h2>Delivery of Services</h2>
-      <div class="del-services wrapper padding-bottom">
+      <div class="del-services wrapper padding">
         <p>In-Person</p>
         <div>
           <img src="assets/svg/icons8-virtual-machine-96.png" alt="" />
@@ -142,58 +191,7 @@
       </div>
     </section>
 
-    <!-- About -->
-
-    <section class="padding alternative-section-bg" id="about">
-      <div class="wrapper">
-        <h2>Bio and Education: Meet Matt</h2>
-        <div class="about">
-          <div class="">
-            <img src="assets/0.jpeg" alt="" />
-            <h4>Registered Physiotherapist</h4>
-            <h4>MScPT, MSc Neuroscience, BSc (Hons)</h4>
-          </div>
-          <div class="frank-text">
-            <p>
-              Matt began his academic journey at Carleton University, graduating
-              in 2015 with a Bachelor of Science degree in Neuroscience and
-              Mental Health. He then completed his Master of Science degree
-              within the field of Neuroscience at Queen’s University in 2017,
-              exploring how eye movements can be used as a potential biomarker
-              to diagnose and assess neurological disorders, such as Alzheimer’s
-              disease. He was awarded the prestigious Frederick Banting and
-              Charles Best Canada Graduate Scholarship for his research and
-              accomplishments.
-            </p>
-            <p>
-              After completing his thesis, Matt pursued a second Master of
-              Science degree in Physical Therapy at Queen’s University,
-              graduating in 2019. Matt has furthered his clinical training by
-              completing courses in soft tissue release, advanced manual
-              therapy, dry needling/acupuncture, pain neuroscience, and
-              vestibular rehabilitation techniques.
-            </p>
-            <p>
-              Matt has a special interest in treating a wide variety of clients,
-              ranging from elite athletes to clients suffering from debilitating
-              chronic pain. He also has experience treating clients suffering
-              from vertigo, cervicogenic headaches, running injuries, and lower
-              back pain, both acute and chronic.
-            </p>
-            <p>
-              Matt is passionate about accelerating his clients’ recovery from
-              injury. He values compassion, always striving to understand his
-              client’s values and individualizes their rehabilitation to suit
-              their functional needs and goals. He strives to implement
-              evidence-informed techniques into his practice, remaining up to
-              date on effective treatment strategies and educational approaches.
-              When not at work, Matt loves to be outdoors camping, fishing,
-              golfing and lifting weights.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+    <hr class="wrapper style-eight" />
 
     <!-- Credentials -->
 
@@ -221,6 +219,16 @@
         </div>
       </div>
     </section>
+
+    <!-- Header -->
+
+    <header class="alternative-section-bg">
+      <div class="header-image-container">
+        <img src="assets/background-images/collage2.png" alt="" />
+      </div>
+    </header>
+
+    <hr class="wrapper style-eight" />
 
     <!-- Contact Us -->
 
