fixed a lot of bugs

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </a>
         <div class="menu-items">
           <a data-scroll href="#home">Home</a>
-          <a data-scroll href="#services">Services</a>
-          <div>
+          <a data-scroll href="#about">About</a>
+          <div class="logo-container">
             <a href="#">
               <img src="assets/logo-removebg-preview.png" alt="" />
             </a>
           </div>
-          <a data-scroll href="#about">About</a>
+          <a data-scroll href="#services">Services</a>
           <a data-scroll href="#contact-frank" class="contact-button"
             >Contact</a
           >
@@ -157,7 +157,7 @@
 
     <section class="padding-top alternative-section-bg" id="del-services">
       <h2>Delivery of Services</h2>
-      <div class="del-services wrapper padding">
+      <div class="del-services wrapper">
         <p>In-Person</p>
         <div>
           <img src="assets/svg/icons8-virtual-machine-96.png" alt="" />
@@ -246,7 +246,7 @@
             <p>I look forward to hearing from you and meeting you soon!</p>
           </div>
           <div>
-            <form action="https://formspree.io/mjvagkar" method="POST">
+            <form action="https://formspree.io/xdowbpjp" method="POST">
               <label for="">
                 Your name:
               </label>
@@ -296,14 +296,14 @@
         </div>
       </footer>
       <div class="wrapper">
-        <div class="iframe-container">
+        <div class="map-responsive">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11362.144215367067!2d-79.4117341!3d44.6065138!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1985f42fbb9619e2!2sSynergy%20Healthcare%20Group!5e0!3m2!1sen!2sca!4v1595453206941!5m2!1sen!2sca"
             width="1200"
             height="300"
             frameborder="0"
             style="border: 0; margin: 0 auto;"
-            allowfullscreen=""
+            allowfullscreen="0"
             aria-hidden="false"
             tabindex="0"
           ></iframe>
