fixed bug in mobile navbar

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             Physiotherapists of Ontario.
           </p>
         </div>
-        <p>Direct billing</p>
+        <p>Direct Billing</p>
         <div>
           <img src="assets/svg/icons8-physical-therapy-96.png" alt="" />
           <p>
