fixed mobile nav logo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
     <nav class="section-bg" id="navbar">
       <div class="navbar-container">
+        <div class="logo-container-two">
+          <a href="#">
+            <img src="assets/logo-removebg-preview.png" alt="" />
+          </a>
+        </div>
         <a href="#null" class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -247,17 +252,11 @@
           </div>
           <div>
             <form action="https://formspree.io/xdowbpjp" method="POST">
-              <label for="">
-                Your name:
-              </label>
+              <label for=""> Your name: </label>
               <input type="text" name="name" />
-              <label>
-                Your email:
-              </label>
+              <label> Your email: </label>
               <input type="text" name="_replyto" />
-              <label>
-                Your message:
-              </label>
+              <label> Your message: </label>
               <textarea name="message"></textarea>
 
               <!-- your other form fields go here -->
@@ -302,7 +301,7 @@
             width="1200"
             height="300"
             frameborder="0"
-            style="border: 0; margin: 0 auto;"
+            style="border: 0; margin: 0 auto"
             allowfullscreen="0"
             aria-hidden="false"
             tabindex="0"
@@ -312,7 +311,7 @@
     </div>
 
     <div class="copyright">
-      <p class="wrapper" style="color: white;">
+      <p class="wrapper" style="color: white">
         Copyright © 2020 Smorenburg Physiotherapy
       </p>
     </div>
