updated contact info and collage image

--- a/index.html
+++ b/index.html
@@ -213,13 +213,19 @@
           </a>
         </div>
         <div>
-          <a href="https://physiotherapy.ca/" target="blank">
-            <img src="assets/cpa-logo.png" alt="" />
+          <a
+            href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj1icyi9ojzAhWSdd8KHegQCSUQFnoECAcQAw&url=https%3A%2F%2Fcihr-irsc.gc.ca%2Fe%2F193.html&usg=AOvVaw3FB8FFPzDGhKFBcW4nTreH"
+            target="blank"
+          >
+            <img src="assets/cihr.png" alt="" />
           </a>
         </div>
         <div>
-          <a href="https://opa.on.ca/" target="blank">
-            <img src="assets/opa.png" alt="" />
+          <a
+            href="https://concussioncaretraining.com/courses/credential-programs/impact-trained-physical-therapist-2/"
+            target="blank"
+          >
+            <img src="assets/impact.png" alt="" />
           </a>
         </div>
       </div>
@@ -274,14 +280,14 @@
       <footer class="wrapper padding-top padding-bottom">
         <div>
           <h4>Clinic Location and Name</h4>
-          <p>Orillia Synergy Healthcare Group</p>
-          <p>129 Front Street South</p>
-          <p>Orillia, ON</p>
-          <p>L3V 4S6</p>
+          <p>Xcel Physiotherapy</p>
+          <p>66 West St Suite 2</p>
+          <p>Antigonish, NS</p>
+          <p>B2G 2X7</p>
         </div>
         <div>
           <h4>Phone</h4>
-          <p>705-329-1090</p>
+          <p>902-735-1818</p>
           <h4>Email</h4>
           <p>matthew.smorenburg@gmail.com</p>
         </div>
@@ -297,14 +303,12 @@
       <div class="wrapper">
         <div class="map-responsive">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11362.144215367067!2d-79.4117341!3d44.6065138!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1985f42fbb9619e2!2sSynergy%20Healthcare%20Group!5e0!3m2!1sen!2sca!4v1595453206941!5m2!1sen!2sca"
-            width="1200"
-            height="300"
-            frameborder="0"
-            style="border: 0; margin: 0 auto"
-            allowfullscreen="0"
-            aria-hidden="false"
-            tabindex="0"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11162.944070897986!2d-62.007965760562215!3d45.61594866564677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b5c458fcbcd380b%3A0x4d1f35631202164b!2sXcel%20Physiotherapy!5e0!3m2!1sen!2sca!4v1631982026761!5m2!1sen!2sca"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
           ></iframe>
         </div>
       </div>
