fixed some spacing issues

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       </div>
     </header>
 
-    <hr class="wrapper style-eight" />
+    <hr style="margin-top: 100px" class="wrapper style-eight" />
 
     <!-- Contact Us -->
 
