made small edit to delivery of services

--- a/index.html
+++ b/index.html
@@ -167,11 +167,10 @@
         <div>
           <img src="assets/svg/icons8-virtual-machine-96.png" alt="" />
           <p>
-            Clients within Orillia, Barrie, and Simcoe regions can be assessed
-            and treated in-person, within the clinic. Before coming into the
-            clinic, we will gather your contact information and provide a
-            COVID-19 pre-screen to maintain appropriate infection control
-            standards and procedures.
+            Clients can be assessed and treated in-person, within the clinic.
+            Before coming into the clinic, we will gather your contact
+            information and provide a COVID-19 pre-screen to maintain
+            appropriate infection control standards and procedures.
           </p>
         </div>
         <p>Tele-Health</p>
